# Stash-Wallet

stash-wallet/: LICENSE
stash-wallet/contracts/polygon/: Referral.sol  StableUSD.sol  Stake.sol
stash-wallet/core/: Cargo.toml
stash-wallet/core/src/: crosschain.rs  encryption.rs  keygen.rs  main.rs  qrcode.rs  signing.rs  swap.rs
stash-wallet/docs/ar/: README_ar.md  user-guide.md
stash-wallet/docs/bn/: hiREADME_bn.md  user-guide.md
stash-wallet/docs/de/: hiREADME_de.md  user-guide.md
stash-wallet/docs/en/: README_en.md  user-guide.md
stash-wallet/docs/es/: README_es.md  user-guide.md
stash-wallet/docs/fr/: hiREADME_fr.md  user-guide.md
stash-wallet/docs/hi/: hiREADME_hi.md  user-guide.md
stash-wallet/docs/id/: hiREADME_id.md  user-guide.md
stash-wallet/docs/ja/: hiREADME_ja.md  user-guide.md
stash-wallet/docs/ko/: hiREADME_ko.md  user-guide.md
stash-wallet/docs/mr/: hiREADME_mr.md  user-guide.md
stash-wallet/docs/pt/: hiREADME_pt.md  user-guide.md
stash-wallet/docs/ru/: hiREADME_ru.md  user-guide.md
stash-wallet/docs/sw/: hiREADME_sw.md  user-guide.md
stash-wallet/docs/ta/: hiREADME_ta.md  user-guide.md
stash-wallet/docs/te/: hiREADME_te.md  user-guide.md
stash-wallet/docs/tr/: README_tr.md  user-guide.md
stash-wallet/docs/ur/: hiREADME_ur.md  user-guide.md
stash-wallet/docs/vi/: hiREADME_vi.md  user-guide.md
stash-wallet/docs/zh/: README_zh.md  user-guide.md
stash-wallet/fiat-gateway/: bank-transfer.js  invoice.js
stash-wallet/scripts/: usb-deploy.sh
stash-wallet/ui/: App.js  index.html  main.js
(+25 files in other folders)
