[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
bip32utils = "0.3.0"
bip39 = "0.4.0"
rust-secp256k1 = "0.27.0"
ed25519-dalek = "1.0.1"
schnorr_fun = { version = "0.9.0", features = ["fun"] }
aes-gcm = { version = "0.10.2", features = ["heapless"] }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.5.0"
hex = "0.4.3"
qrcode = "0.11.1"
image = "0.23.14"
rand = "0.8.5"
sha2 = "0.10.8"
serde_json = "1.0"